--- a/Style/Parciales/_fullhd.scss
+++ b/Style/Parciales/_fullhd.scss
@@ -23,24 +23,24 @@
         }
     }
     
-    // .resultsSearch{
-    //     #resultsImg{
-    //         margin-left: 150px;
-    //         margin-right: 150px;
-    //         grid-template-columns: 23% 23% 23% 23%;
-    //         column-gap: 3%;
-    //         img{
-    //             height: 200px;
-    //         }
+    .resultsSearch{
+        #resultsImg{
+            margin-left: 150px;
+            margin-right: 150px;
+            grid-template-columns: 23% 23% 23% 23%;
+            column-gap: 3%;
+            img{
+                height: 200px;
+            }
             
-    //     }
-    //     .ctnbuttonMore{
-    //         img{
-    //             height: 15vw;
-    //             width: 18vw;
-    //         }
-    //     }
-    // }
+        }
+        .ctnbuttonMore{
+            img{
+                height: 15vw;
+                width: 18vw;
+            }
+        }
+    }
 
 }
 
