--- a/Style/Parciales/_variables.scss
+++ b/Style/Parciales/_variables.scss
@@ -9,6 +9,9 @@ $colorFondo-Dark: #37383C;
 $colorFondBurger-Dark: #000000;
 $colorLetras-Dark: #ffff;
 $colorBorde-Dark: #ffff;
+$colorHrInput: #9cafc3;
+$colorModal: rgba(255, 255, 255, 0.849);
+$colorModal2: #ced7e1;
 
 
 
