--- a/Style/style.scss
+++ b/Style/style.scss
@@ -6,10 +6,13 @@
 @import "./Parciales/footer";
 @import "./Parciales/misgifos";
 @import "./Parciales/misgifostitle";
-@import "./Parciales/favctn";
-@import "./Parciales/favtittle";
+@import "./Parciales/fav";
 @import "./Parciales/fullhd";
 @import "./Parciales/results";
+@import "./Parciales/modal";
+@import "./Parciales/crearGifos";
+
+
 
 *{
     padding: 0px;
