--- a/Style/Parciales/_titulo.scss
+++ b/Style/Parciales/_titulo.scss
@@ -22,59 +22,87 @@
         display: flex;
         justify-content: center;
         img{
-        height: 130px;
+        height: 115px;
         width: 273px;
         }
     }
-    .search{
-        display: flex;
-        flex-direction: row;
-        border: 1px solid ;
+    .searchTotal{
+        
+
+        border: 1.7px solid ;
         min-height: 40px;
-        width: 80vw;
+        width: 90%;
         border-radius: 27px;
         border-color: var(--color-letras);
         background-color: var(--color-principal);
         color: var(--color-letras);
         margin: 0 auto;
-        .imgSearch{
-            padding-right: 20px;
-            }
-        input{
-            padding-left: 10px;
-            border: 0px;
+        .search{
+            
+            display: flex;
+            flex-direction: row;
+            // border: 1px solid ;
+            min-height: 40px;
+            width: 90%;
             border-radius: 27px;
-            margin: 15 auto;
-            display: block;
-            width: 79vw;
-            font-family: "Roboto", sans-serif;
-            font-size: 16px;
+            border-color: var(--color-letras);
             background-color: var(--color-principal);
-            text-align: left;
-            box-sizing: border-box;
-            &:focus{
-                outline: none;
-                font-size: 17px;
-                font-weight: 500;
-                padding-left: 15px;
+            color: var(--color-letras);
+            margin: 0 auto;
+            .imgSearch{
+                margin-right: 20px;
             }
-            // &-input {
-            //     display: flex;
-            //     margin: 0 20px;
-            // }
-            // &-suggestion {
-            //     display: none;
-                
-            // }
-            // &-hide {
-            //     display: none;
-            // }
-        // input::placeholder{
-        //     font-size: 16px;
-        //     padding-left: 25px;   
-        // }
-        
-        
-        }    
-    } 
+            input{
+                border: none;
+                padding-left: 10px;
+                border-radius: 35px;
+                margin: 15 auto;
+                display: block;
+                width: 75vw;
+                font-family: "Roboto", sans-serif;
+                font-size: 16px;
+                background-color: var(--color-principal);
+                text-align: left;
+                box-sizing: border-box;
+                &:focus{
+                    outline: none;
+                    font-size: 17px;
+                    font-weight: 500;
+                    padding-left: 15px;
+                }
+            }
+            
+            
+        }
+        hr{
+            display: none;
+            border: 1px solid $colorHrInput;
+            background-color: $colorHrInput;
+            opacity: 0.5;
+            width: 157px;
+            margin: 35px auto 0;
+        }
+        .searchRecomend{
+            display: none;
+            ul {
+                margin: 10px 24px 18px;
+                li {
+                    .lupaSugerencias {
+                        height: 15.8px;
+                        width: 15.8px;
+                        margin-right: 14px;
+                    }
+                    line-height: 30px;
+                    text-align: start;
+                    list-style: none;
+                    color: $colorHrInput;
+                    font-family: "Roboto", sans-serif;
+                    letter-spacing: 0.7px;
+                    cursor: pointer;
+                }
+            }
+        }
+
+    }
+    
 }
