--- a/Style/Parciales/_fullhd.scss
+++ b/Style/Parciales/_fullhd.scss
@@ -188,25 +188,25 @@
             }
         }    
     }
-    .titulo{
-        .divObserver {
-            width: 100px;
-            height: 100px;
-            position: absolute;
-            top: 420px;
-            background-color: rgba(0, 0, 0, 0.438);
-            align-self: flex-start;
-            visibility: hidden;
-        } 
-        .searchTotal{
-            .isSticky {
-                width: 23%;
-                align-self: flex-start;
-                left: 23%;
-            }
-        }
+    // .titulo{
+    //     .divObserver {
+    //         width: 100px;
+    //         height: 100px;
+    //         position: absolute;
+    //         top: 420px;
+    //         background-color: rgba(0, 0, 0, 0.438);
+    //         align-self: flex-start;
+    //         visibility: hidden;
+    //     } 
+    //     .searchTotal{
+    //         .isSticky {
+    //             width: 23%;
+    //             align-self: flex-start;
+    //             left: 23%;
+    //         }
+    //     }
         
-    }
+    // }
     .gifos{
         margin-top: 25px;
         margin-bottom: 50px;
@@ -273,22 +273,22 @@
                                 cursor: pointer;
                             }
                             .iconFav {
-                                background-image: url("./imagenes/icon-fav.svg");
+                                background-image: url("../imagenes/icon-fav.svg");
                                 &:hover {
-                                  background-image: url("./imagenes/icon-fav-hover.svg");
+                                  background-image: url("../imagenes/icon-fav-hover.svg");
                                 }
                             }
                 
                             .iconDown {
-                                background-image: url("./imagenes/icon-download.svg");
+                                background-image: url("../imagenes/icon-download.svg");
                                 &:hover {
-                                  background-image: url("./imagenes/icon-download-hover.svg");
+                                  background-image: url("../imagenes/icon-download-hover.svg");
                                 }
                             }
                             .iconMax {
-                                background-image: url("./imagenes/icon-max-normal.svg");
+                                background-image: url("../imagenes/icon-max-normal.svg");
                                 &:hover {
-                                  background-image: url("./imagenes/icon-max-hover.svg");
+                                  background-image: url("../imagenes/icon-max-hover.svg");
                                 }
                             }
                             .gifData{
@@ -359,23 +359,23 @@
                             cursor: pointer;
                         }
                         .iconFav {
-                            background-image: url("./imagenes/icon-fav.svg");
+                            background-image: url("../imagenes/icon-fav.svg");
                             &:hover {
-                              background-image: url("./imagenes/icon-fav-hover.svg");
+                              background-image: url("../imagenes/icon-fav-hover.svg");
                             }
                         }
                         
             
                         .iconDown {
-                            background-image: url("./imagenes/icon-download.svg");
+                            background-image: url("../imagenes/icon-download.svg");
                             &:hover {
-                              background-image: url("./imagenes/icon-download-hover.svg");
+                              background-image: url("../imagenes/icon-download-hover.svg");
                             }
                         }
                         .iconMax {
-                            background-image: url("./imagenes/icon-max-normal.svg");
+                            background-image: url("../imagenes/icon-max-normal.svg");
                             &:hover {
-                              background-image: url("./imagenes/icon-max-hover.svg");
+                              background-image: url("../imagenes/icon-max-hover.svg");
                             }
                         }
                         .gifData{
@@ -453,28 +453,28 @@
                             cursor: pointer;
                         }
                         .iconFav {
-                            background-image: url("./imagenes/icon-fav.svg");
+                            background-image: url("../imagenes/icon-fav.svg");
                             &:hover {
-                            background-image: url("./imagenes/icon-fav-hover.svg");
+                            background-image: url("../imagenes/icon-fav-hover.svg");
                             }
                         }
                         .itsFav {
-                            background-image: url("./imagenes/icon-trash-normal.svg");
+                            background-image: url("../imagenes/icon-trash-normal.svg");
                             &:hover {
-                                background-image: url("./imagenes/icon-trash-hover.svg");
+                                background-image: url("../imagenes/icon-trash-hover.svg");
                             }
                         }
             
                         .iconDown {
-                            background-image: url("./imagenes/icon-download.svg");
+                            background-image: url("../imagenes/icon-download.svg");
                             &:hover {
-                            background-image: url("./imagenes/icon-download-hover.svg");
+                            background-image: url("../imagenes/icon-download-hover.svg");
                             }
                         }
                         .iconMax {
-                            background-image: url("./imagenes/icon-max-normal.svg");
+                            background-image: url("../imagenes/icon-max-normal.svg");
                             &:hover {
-                            background-image: url("./imagenes/icon-max-hover.svg");
+                            background-image: url("../imagenes/icon-max-hover.svg");
                             }
                         }
                         .gifData{
